# glosilo

./: LICENSE  MANIFEST.in  NOTICE  README.md  STRIP_AFFIXES2_ALGORITHM.md  check_ending_words.py  find_preposition_prefixes.py  gloss.txt  gloss1.tex  gloss2.tex  gloss3.tex  gloss5.tex  gloss6.tex  hobbit1eng.txt  hobbit1epo.txt  in-the-abyss-en.txt  pyproject.toml  requirements.txt  text1.txt  text2.txt  text3.txt  text4.txt  text5.txt  text6.txt  the-beetle-experiment-en.txt  the-music-of-erich-zann-en.txt  the-orange-opal-en.txt  the-shadow-kingdom-en.txt  tox.ini
.claude/: settings.local.json
src/: checker.py  genkaps.py  genrads.py  gensenses.py
src/glosilo/: __init__.py  __main__.py  additions.txt  consts.py  dictionary.py  difficult.txt  eostem.py  glosser.py  in-the-abyss-eo.txt  lookup.py  mcp_client.py  mcp_server.py  names.txt  nlp.py  stem.py  structs.py  the-beetle-experiment-eo.txt  the-music-of-erich-zann-eo.txt  the-orange-opal-eo.txt
src/glosilo/retavortaropy/: main.py  utils.py  xmlparse.py
stubs/: jsonpath_ng.pyi
tests/: dictionary_test.py  nlp_test.py  test_compounds.py  test_genkaps.py  test_gensenses.py  test_lookup.py  test_strip_affixes.py  test_strip_affixes2.py
