[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "glosilo"
dynamic = ["version"]
description = "Attempts to create English glosses from Esperanto text"
readme = "README.md"
authors = [{ name = "Zekri Drako", email = "robert.c.baruch@gmail.com" }]
keywords = ["Esperanto", "glossing", "NLP"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.13"
license = {text="Apache License, Version 2.0"}
dependencies = [
    "jsonpath-ng>=1.7.0",
    "lxml>=6.0.2",
    "tqdm>=4.67.1",
]

[tool.setuptools.dynamic]
version = { attr = "glosilo.VERSION" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["glosilo*"]
namespaces = false

[dependency-groups]
dev = [
    "types-lxml>=2026.1.1",
]

[project.scripts]
stem = "glosilo.stem:main"

[tool.mypy]
plugins = ["mypy_plugin_lxml.main"]

[tool.black]
