[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "glosilo"
dynamic = ["version"]
description = "Attempts to create English glosses from Esperanto text"
readme = "README.md"
authors = [{ name = "Zekri Drako", email = "robert.c.baruch@gmail.com" }]
keywords = ["Esperanto", "glossing", "NLP"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.13"
license = "Apache-2.0"
dependencies = [
    "fastmcp<3",
    "jsonpath-ng>=1.7.0",
    "lxml>=6.0.2",
    "tqdm>=4.67.1",
]

[tool.setuptools.dynamic]
version = { attr = "glosilo.VERSION" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["glosilo*"]
namespaces = false

[tool.setuptools.package-data]
glosilo = ["data/*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "types-lxml>=2026.1.1",
    "types-tqdm>=4.67.0.20250809",
]

[project.scripts]
stem = "glosilo.stem:main"

[tool.mypy]
plugins = ["mypy_plugin_lxml.main"]
mypy_path = "$MYPY_CONFIG_FILE_DIR/src,$MYPY_CONFIG_FILE_DIR/stubs"
explicit_package_bases = true

[tool.black]
